  phpize) (Chris Jones/Oracle Corp.)
- Fixed bug #46542 (Extending PDO class with a __call() function doesn't work
  as expected). (Johannes)
- Fixed bug #46347 (parse_ini_file() doesn't support * in keys). (Nuno)
- Fixed bug #46048 (SimpleXML top-level @attributes not part of iterator).
  (David C.)
- Fixed bug #45877 (Array key '2147483647' left as string). (Matt)
- Fixed bug #45432 (PDO: persistent connection leak). (Felipe)
- Fixed bug #43831 ($this gets mangled when extending PDO with persistent 
  connection). (Felipe)
- Fixed PECL Bug #16035 (OCI8: oci_connect without ORACLE_HOME defined causes
  segfault) (Chris Jones/Oracle Corp.)
- Fixed PECL Bug #15988 (OCI8: sqlnet.ora isn't read with older Oracle
  libraries) (Chris Jones/Oracle Corp.)
- Fixed PECL Bug #14268 (Allow "pecl install oci8" command to "autodetect" an
  Instant Client RPM install) (Chris Jones/Oracle Corp.)


29 Jan 2009, PHP 5.3.0 Beta 1
- Upgraded bundled sqlite to version 3.6.10. (Scott, Ilia)

- Deprecated session_register(), session_unregister() and
  session_is_registered(). (Hannes)

- Improved DNS API
 . Added Windows support for dns_check_record(), dns_get_mx(), checkdnsrr() and
   getmxrr(). (Pierre)
 . Added support for old style DNS functions (supports OSX and FBSD). (Scott)
 . Added a new "entries" array in dns_check_record() containing the TXT
   elements. (Felipe, Pierre)

- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)
- Changed dl() to be disabled by default. Enabled only when explicitly
  registered by the SAPI. Currently enabled with cli, cgi and embed SAPIs.
  (Dmitry)
- Changed opendir(), dir() and scandir() to use default context when no context
  argument is passed. (Sara)
- Changed open_basedir to allow tightening in runtime contexts. (Sara)
- Changed PHP/Zend extensions to use flexible build IDs. (Stas)

- Added new Enchant extension. (Pierre)
